# deep_learning_from_scratch

./: README.md  chap2.py  pyproject.toml
src/: chap2.py  chap3.py
