[tool.poetry]
name = "deep_learning_from_scratch"
version = "0.1.0"
description = "Deep Learning from scratch"
authors = ["Shunya Ueta"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.5"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
